# btc-z.github.io

./: .gitignore  404.html  CLAUDE.md  CLAUDE_COFFEE.md  CNAME  FONT.md  GEMINI.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  字体.md
.claude/commands/: focus.md  journal.md  link-post.md  write.md
.claude/skills/: focus.md  journal.md
.github/ISSUE_TEMPLATE/: coffee_log.yml
.github/workflows/: ci.yml  cicd.yml  coffee_journal.yml
archive/2024/: index.html
category/bitcoin/: index.html
category/meditation/: index.html
docs/: CNAME  focus.md  index.md  journal.md  咖啡.md  短期.md  长期.md
docs/en/: index.md
docs/posts/: 2024_11_01_vipassana.md  coldcard_payment.md  index.md  into_coldcard.md  personal_finance.md  private_electrum_server.md  self_custody.md  vpn_mullvad.md
mkdocs-blog-template/: GITHUB_PAGES_SETUP.md  QUICKSTART.md  README.md  SIMPLE_FLOW.md  USAGE_GUIDE.md  WHAT_TO_READ.md  cookiecutter.json
mkdocs-blog-template/{{cookiecutter.project_slug}}/: DEPLOY_TO_GITHUB_PAGES.md  GITHUB_PAGES_CHEATSHEET.md  README.md  START_HERE.md  mkdocs.yml  pyproject.toml
mkdocs-blog-template/{{cookiecutter.project_slug}}/.github/workflows/: cicd.yml
mkdocs-blog-template/{{cookiecutter.project_slug}}/docs/: CNAME  index.md
mkdocs-blog-template/{{cookiecutter.project_slug}}/docs/posts/books/: sample-book-review.md
mkdocs-blog-template/{{cookiecutter.project_slug}}/docs/posts/reflections/: welcome.md
scripts/: process_coffee_log.py
search/: search_index.json
site/: 404.html  index.html
site/en/: index.html
咖啡/: index.html
(+83 files in other folders)
