[tool.poetry]
name = "btc-z-github-io"
version = "0.1.0"
description = ""
authors = ["zlab"]
readme = "README.md"
packages = [{include = "btc_z"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.9"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
